feat: Adding the following endpoint for login: /users/login
