# backend/src/main/java/com/vapeur/backwork/RequestDto/UserRequestDto.java
@@ -1,0 +1,4 @@
+package com.vapeur.backwork.RequestDto;
+
+public record UserRequestDto(String email, String password) {
+}
